--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 
 #nav{
     width: 100vw;
+    height: 4vw;
     position: fixed;
     top: 1;
     z-index: 1;
@@ -19,6 +20,29 @@ nav img{
 .banner{
     padding: 0;
     margin: 0;
+}
+
+.banner img{
+    height: 900px;
+    width: 100vw;
+    filter: brightness(0.5);
+
+}
+
+.entrada{
+    position: relative;
+    top: -10vw;
+    padding: 1vw;
+    border-radius: 2rem;
+    color: white;
+    background-color: rgb(79, 90, 90);
+}
+
+.texto{
+    padding: 1vw;
+    border-radius: 2rem;
+    color: white;
+    background-color: rgb(79, 90, 90);
 }
 
 .intersection{
@@ -55,4 +79,27 @@ nav img{
 #botones a{
     text-decoration: none;
     color: white;
+}
+
+.docs{
+    padding: 30px;
+    background-color: rgb(133, 186, 218);
+}
+
+.card{
+
+    align-items: center;
+    border-radius: 1.5vw;
+    margin: 5vw;
+}
+.card img{
+    width: 20vw;
+    
+}
+
+.card:hover{
+    background-color: rgb(87, 27, 250);
+    color: white;
+    transform: scale(1.1);
+    transition: 0.5s;
 }
