--- a/css/index.css
+++ b/css/index.css
@@ -2,104 +2,129 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-
-#nav{
-    width: 100vw;
-    height: 4vw;
-    position: fixed;
-    top: 1;
-    z-index: 1;
-}
-
-nav img{
-    width: 8vw;
-}
-
-.banner{
-    padding: 0;
-    margin: 0;
-}
-
-.banner img{
-    height: 900px;
-    width: 100vw;
-    filter: brightness(0.5);
-
-}
-
-.entrada{
-    position: relative;
-    top: -10vw;
-    padding: 1vw;
-    border-radius: 2rem;
-    color: white;
-    background-color: rgb(79, 90, 90);
-}
-
-.texto{
-    padding: 1vw;
-    border-radius: 2rem;
-    color: white;
-    background-color: rgb(79, 90, 90);
-}
-
-.intersection{
-    padding: 0 10% 5% 10%;
-    height: fit-content;
-}
-
-.intersection article{
-    padding: 5% 0;
-    text-align: justify;
-}
-
-.intersection h2{
-    text-align: center;
-}
-
-.intersection iframe{
-    width: 100%;
-}
-
-#registro{
-    background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
-    color: white;
-}
-
-#botones{
-    border: 1px solid white;
-    border-radius: 5px;
-    max-width: 40vw;
-    margin: 0 25%;
-    text-align: center;
-}
-
-#botones a{
-    text-decoration: none;
-    color: white;
-}
-
-.docs{
-    padding: 30px;
-    background-color: rgb(133, 186, 218);
-}
-
-.card{
-
-    align-items: center;
-    border-radius: 1.5vw;
-    margin: 5vw;
-}
-.card img{
-    width: 20vw;
     
 }
 
-.card:hover{
-    background-color: rgb(87, 27, 250);
-    color: white;
-    transform: scale(1.1);
-    transition: 0.5s;
+header{
+    max-height: 620px !important;
 }
+
+.nav-item{
+    transition: 0.2s;
+    margin: 10px;
+}
+.nav-item:hover{
+    transform: scale(1.4);
+    
+}
+
+header
+{
+    height: auto;
+}
+
+
+
+#myCarousel img{
+    width:auto;
+    height: 620px;
+    object-fit: cover; /* Mantiene la relación de aspecto y recorta la imagen para ajustarla */
+}
+
+h1,h2{
+    font-family: 'Inter', sans-serif;
+}
+
+#tr {
+  transition: background-color 0.2s ease;
+}
+
+
+
+
+.custom-toggler.navbar-toggler-icon {
+    background-color: white; /* Cambia el color del ícono a blanco */
+}
+
+
+
+
+.carousel-item::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.733), rgba(0, 0, 0, 0.616)); /* Utiliza un degradado para el oscurecimiento */
+  }
+
+  .welcome{
+    position: relative;
+    top: -338px;
+  }
+
+  @media (max-width: 576px) {
+    .carousel-item img {
+      width: auto; /* Ancho automático para evitar que la imagen ocupe el 100% del contenedor */
+      max-width: 100%; /* Máximo ancho del 100% para mantener la responsividad */
+      height: auto; /* Altura automática para mantener la relación de aspecto */
+    }
+  }
+
+
+  .ct{
+    padding: 40px;
+   
+
+  }
+
+  .ct h2{
+    color: #007bff;
+    font-size: 50px;
+  }
+  .ct p{
+    padding: 20px;
+    text-align: justify;
+    font-family: 'Manrope', sans-serif;
+  }
+
+  .ct2{
+    background-color: #007bff;
+    color: white;
+  }
+
+  
+  .ct2 h2{
+    background-color: #007bff;
+    color: white;
+  }
+
+  .ct2 p{
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Manrope', sans-serif;
+
+
+
+  }
+
+  iframe{
+    padding: 50px;
+    align-items: center;
+   
+  }
+
+
+  @media (max-width: 767px) {
+    /* Estilo para pantallas pequeñas */
+    .ct2 {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .col-md-6 {
+        width: 100%;
+        margin-top: 20px; /* Ajusta el espaciado según tus necesidades */
+    }
+  }
