--- a/css/index.css
+++ b/css/index.css
@@ -1,130 +1,153 @@
+
+/*home*/
+
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
 
 header{
-    max-height: 620px !important;
+  max-height: 620px !important;
 }
 
 .nav-item{
-    transition: 0.2s;
-    margin: 10px;
+  transition: 0.2s;
+  margin: 10px;
 }
 .nav-item:hover{
-    transform: scale(1.4);
-    
+  transform: scale(1.4);
+  
 }
 
 header
 {
-    height: auto;
+  height: auto;
 }
 
 
 
 #myCarousel img{
-    width:auto;
-    height: 620px;
-    object-fit: cover; /* Mantiene la relación de aspecto y recorta la imagen para ajustarla */
+  width:auto;
+  height: 620px;
+  object-fit: cover; /* Mantiene la relación de aspecto y recorta la imagen para ajustarla */
 }
 
 h1,h2{
-    font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 #tr {
-  transition: background-color 0.2s ease;
+transition: background-color 0.2s ease;
 }
 
 
 
 
 .custom-toggler.navbar-toggler-icon {
-    background-color: white; /* Cambia el color del ícono a blanco */
+  background-color: white; /* Cambia el color del ícono a blanco */
 }
 
 
 
 
 .carousel-item::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.733), rgba(0, 0, 0, 0.616)); /* Utiliza un degradado para el oscurecimiento */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.733), rgba(0, 0, 0, 0.616)); /* Utiliza un degradado para el oscurecimiento */
+}
+
+.welcome{
+  position: relative;
+  top: -338px;
+}
+
+@media (max-width: 576px) {
+  .carousel-item img {
+    width: auto; /* Ancho automático para evitar que la imagen ocupe el 100% del contenedor */
+    max-width: 100%; /* Máximo ancho del 100% para mantener la responsividad */
+    height: auto; /* Altura automática para mantener la relación de aspecto */
+  }
+}
+
+
+.ct{
+  padding: 40px;
+ 
+
+}
+
+.ct h2{
+  color: #007bff;
+  font-size: 50px;
+}
+.ct p{
+  padding: 20px;
+  text-align: justify;
+  font-family: 'Manrope', sans-serif;
+}
+
+.ct2{
+  background-color: #007bff;
+  color: white;
+}
+
+
+.ct2 h2{
+  background-color: #007bff;
+  color: white;
+}
+
+.ct2 p{
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Manrope', sans-serif;
+
+
+
+}
+
+iframe{
+  padding: 50px;
+  align-items: center;
+ 
+}
+
+
+@media (max-width: 767px) {
+  /* Estilo para pantallas pequeñas */
+  .ct2 {
+      flex-direction: column;
+      align-items: stretch;
   }
 
-  .welcome{
-    position: relative;
-    top: -338px;
+  .col-md-6 {
+      width: 100%;/* Ajusta el espaciado según tus necesidades */
   }
+}
 
-  @media (max-width: 576px) {
-    .carousel-item img {
-      width: auto; /* Ancho automático para evitar que la imagen ocupe el 100% del contenedor */
-      max-width: 100%; /* Máximo ancho del 100% para mantener la responsividad */
-      height: auto; /* Altura automática para mantener la relación de aspecto */
-    }
-  }
+#myv{
+margin: 0;
+object-fit: cover; 
+}
 
-
-  .ct{
-    padding: 40px;
-   
-
-  }
-
-  .ct h2{
-    color: #007bff;
-    font-size: 50px;
-  }
-  .ct p{
-    padding: 20px;
-    text-align: justify;
-    font-family: 'Manrope', sans-serif;
-  }
-
-  .ct2{
-    background-color: #007bff;
-    color: white;
-  }
-
-  
-  .ct2 h2{
-    background-color: #007bff;
-    color: white;
-  }
-
-  .ct2 p{
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Manrope', sans-serif;
+.overlay {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.65); /* Puedes ajustar la opacidad cambiando el último valor */
+}
 
 
+.ft1, .ft2, .ft3, .ft4{
+position: relative;
+top: -300px;
+}
 
-  }
-
-  iframe{
-    padding: 50px;
-    align-items: center;
-   
-  }
-
-
-  @media (max-width: 767px) {
-    /* Estilo para pantallas pequeñas */
-    .ct2 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-
-    .col-md-6 {
-        width: 100%;
-        margin-top: 20px; /* Ajusta el espaciado según tus necesidades */
-    }
-  }
